Testing architecture --not working
